# onderwijsvl_python_sdk

./: .gitignore  pyproject.toml
src/onderwijsvl_python_sdk/: __init__.py  instellingen.py  main.py
